@@ -9,12 +9,14 @@ use Term::ReadLine 1.09;
 use Term::ReadLine::Event;
 
 plan skip_all => "IO::Async is not installed" unless eval "
+    use IO::Async;
     use IO::Async::Loop;
     use IO::Async::Timer::Periodic;
     use IO::Async::Handle;
 
     1";
 plan tests => 2;
+diag( "Testing Term::ReadLine::Event: IO::Async version $IO::Async::VERSION" );
 
 my $loop = IO::Async::Loop->new;
 my $term = Term::ReadLine::Event->with_IO_Async('test', loop => $loop);
