@@ -10,6 +10,7 @@ use Term::ReadLine::Event;
 
 BEGIN { plan skip_all => "POE is not installed" unless eval "use POE; 1"; }
 plan tests => 2;
+diag( "Testing Term::ReadLine::Event: POE version $POE::VERSION" );
 
 # silence warning.
 POE::Kernel->run();
