@@ -14,6 +14,7 @@ plan skip_all => "Reflex is not installed" unless eval "
     use Reflex::Interval;
     1";
 plan tests => 2;
+diag( "Testing Term::ReadLine::Event: Reflex version $Reflex::VERSION" );
 
 my $term = Term::ReadLine::Event->with_Reflex('test');
 isa_ok($term->trl, 'Term::ReadLine::Stub');
